[tool.poetry]
name = "repl_python3_beta_VIRUS-SIMULATOR-2"
version = "0.1.0"
description = ""
authors = ["wiersmahomescho <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
username = "^2.1.0"
bitdust = "^0.0.2"
trunity-migrator = "^0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
